<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_video_frame"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@drawable/video_background_gradient">


    <android.view.SurfaceView
		android:id="@+id/preview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_centerInParent="true" >
	</android.view.SurfaceView>

	

	<ImageView
		android:id="@+id/picture_taken_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@android:color/black"
		android:scaleType="centerInside"
		android:visibility="gone" />

	<LinearLayout
		android:id="@+id/controls"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal" >

		<RelativeLayout
			android:id="@+id/panel_layout"
			android:layout_width="@dimen/panel_min_width"
			android:layout_height="match_parent"
			android:background="@drawable/panel_background"
			android:clipChildren="false"
			android:paddingBottom="@dimen/panel_padding"
			android:paddingTop="@dimen/panel_padding" >

			<RelativeLayout
				android:id="@+id/panel_content"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:visibility="gone" >

                <!--  
				<RelativeLayout
					android:id="@+id/mode_button"
					style="@style/PanelButton"
					android:background="@drawable/panel_button"
					android:clickable="true"
					android:clipChildren="false" >

					<ImageView
						xmlns:aptina="http://schemas.android.com/apk/res/com.aptina"
						android:id="@+id/mode_image_holder"
						android:layout_width="@dimen/panel_button_icon_width"
						android:layout_height="@dimen/panel_button_icon_height"
						android:layout_alignParentTop="true"
						android:layout_centerHorizontal="true"
						android:layout_marginTop="@dimen/panel_button_image_margin_top"
						android:scaleType="centerInside"
						android:src="@drawable/icon_active_auto" />

					<TextView
						android:id="@+id/mode_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentBottom="true"
						android:layout_centerHorizontal="true"
						android:layout_marginBottom="@dimen/panel_button_label_margin_bottom"
						android:text="@string/mode_auto"
						android:textColor="@color/resolution_button_text_color"
						android:textSize="@dimen/panel_button_caption_font_size" />

					<ImageView
						android:id="@+id/interlaced_foreground"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:src="@drawable/panel_button_upper_effects" />
				</RelativeLayout>
                -->

				<RelativeLayout
					android:id="@+id/video_resolution_button"
					style="@style/PanelButton"
		
					android:background="@drawable/panel_button"
					android:clickable="true"
					android:clipChildren="false" >
					

					<com.aptina.camera.components.SizeHolder
						xmlns:aptina="http://schemas.android.com/apk/res/com.aptina"
						android:id="@+id/video_resolution_value"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentTop="true"
						android:layout_marginTop="@dimen/resolution_holder_margin_top"
						aptina:deselectedColor="@color/resolution_button_text_color"
						aptina:selected="false"
						aptina:selectedColor="@color/resolution_button_text_color" />

					<TextView
						android:id="@+id/video_resolution_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentBottom="true"
						android:layout_centerHorizontal="true"
						android:layout_marginBottom="@dimen/panel_button_label_margin_bottom"
						android:text="@string/video_resolution_label"
						android:textColor="@color/resolution_button_text_color"
						android:textSize="@dimen/panel_button_caption_font_size" />

					<ImageView
						android:id="@+id/interlaced_foreground"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:src="@drawable/panel_button_upper_effects" />
				</RelativeLayout>
				<RelativeLayout
					android:id="@+id/snapshot_resolution_button"
					style="@style/PanelButton"
					android:layout_below="@id/video_resolution_button"
					android:background="@drawable/panel_button"
					android:clickable="true"
					android:clipChildren="false" >
					

					<com.aptina.camera.components.SizeHolder
						xmlns:aptina="http://schemas.android.com/apk/res/com.aptina"
						android:id="@+id/snapshot_resolution_value"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentTop="true"
						android:layout_marginTop="@dimen/resolution_holder_margin_top"
						aptina:deselectedColor="@color/resolution_button_text_color"
						aptina:selected="false"
						aptina:selectedColor="@color/resolution_button_text_color" />

					<TextView
						android:id="@+id/snapshot_resolution_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentBottom="true"
						android:layout_centerHorizontal="true"
						android:layout_marginBottom="@dimen/panel_button_label_margin_bottom"
						android:text="@string/snapshot_resolution_label"
						android:textColor="@color/resolution_button_text_color"
						android:textSize="@dimen/panel_button_caption_font_size" />

					<ImageView
						android:id="@+id/interlaced_foreground"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:src="@drawable/panel_button_upper_effects" />
				</RelativeLayout>
				<!-- hidden options button
				<RelativeLayout
					android:id="@+id/options_button"
					style="@style/PanelButton"
					android:layout_below="@id/resolution_button"
					android:background="@drawable/panel_button"
					android:clickable="true"
					android:clipChildren="false" >

					<ImageView
						android:id="@+id/options_image_holder"
						android:layout_width="@dimen/panel_button_icon_width"
						android:layout_height="@dimen/panel_button_icon_height"
						android:layout_alignParentTop="true"
						android:layout_centerHorizontal="true"
						android:layout_marginTop="@dimen/panel_button_image_margin_top"
						android:scaleType="centerInside"
						android:src="@drawable/icon_options" />

					<TextView
						android:id="@+id/resolution_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentBottom="true"
						android:layout_centerHorizontal="true"
						android:layout_marginBottom="@dimen/panel_button_label_margin_bottom"
						android:text="@string/options_label"
						android:textColor="@color/resolution_button_text_color"
						android:textSize="@dimen/panel_button_caption_font_size" />

					<ImageView
						android:id="@+id/interlaced_foreground"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:src="@drawable/panel_button_upper_effects" />
				</RelativeLayout>  -->

				<RelativeLayout
					android:id="@+id/switch_button"
					style="@style/PanelButton"
					android:layout_alignParentBottom="true"
					android:layout_marginBottom="0dip"
					android:background="@drawable/panel_button"
					android:clickable="true"
					android:clipChildren="false" >

					<ImageView
						android:id="@+id/switch_image_holder"
						android:layout_width="@dimen/panel_button_icon_width"
						android:layout_height="@dimen/panel_button_icon_height"
						android:layout_alignParentTop="true"
						android:layout_centerHorizontal="true"
						android:layout_marginTop="@dimen/panel_button_image_margin_top"
						android:scaleType="centerInside"
						android:src="@drawable/icon_switch_photo" />

					<TextView
						android:id="@+id/switch_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentBottom="true"
						android:layout_centerHorizontal="true"
						android:layout_marginBottom="@dimen/panel_button_label_margin_bottom"
						android:text="@string/switch_label"
						android:textColor="@color/resolution_button_text_color"
						android:textSize="@dimen/panel_button_caption_font_size"
						android:textStyle="bold" />

					<ImageView
						android:id="@+id/interlaced_foreground"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:src="@drawable/panel_button_upper_effects" />
				</RelativeLayout>

				<ImageView
					android:id="@+id/panel_divider"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_above="@id/switch_button"
					android:layout_centerHorizontal="true"
					android:layout_marginBottom="@dimen/panel_divider_margin_bottom"
					android:scaleType="fitCenter"
					android:src="@drawable/panel_div" />

				<RelativeLayout
					android:id="@+id/reset_button"
					android:layout_width="@dimen/panel_button_size"
					android:layout_height="wrap_content"
					android:layout_above="@+id/panel_divider"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="@dimen/reset_button_margin_top"
					android:layout_marginBottom="-35px"
					android:background="@drawable/settings_button"
					android:clickable="true" >

					<TextView
						android:id="@+id/reset_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:text="@string/reset_label"
						android:textColor="@color/resolution_button_text_color"
						android:textSize="@dimen/panel_button_caption_font_size" />
				</RelativeLayout>
			</RelativeLayout>
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/slider_layout"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:clickable="true" >

			<ImageView
				android:id="@+id/slider_handle"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_centerVertical="true"
				android:clickable="true"
				android:scaleType="fitXY"
				android:src="@drawable/splitter_background" >
			</ImageView>
		</RelativeLayout>

		
		<RelativeLayout
			android:id="@+id/layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical" >

			<com.aptina.camera.components.ShutterButton
				android:id="@+id/btn_shutter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginRight="10dip"
				android:layout_marginTop="10dip"
				android:clickable="true"
				android:focusable="true"
				android:scaleType="center"
				android:src="@drawable/shutter_button_video" />
			
			<ImageView android:id="@+id/video_snap_anim"
		   		android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_centerInParent="true"
				android:background="@drawable/video_snap_boarder"
		     />

			<com.aptina.camera.components.ThumbnailControl
				android:id="@+id/gallery_thumbnail"
				android:layout_width="@dimen/thumbnail_width"
				android:layout_height="@dimen/thumbnail_height"
				android:layout_alignParentBottom="true"
				android:layout_marginBottom="5dip" >

				<ImageView
					android:id="@+id/gallery_image"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@drawable/thumbs"
					android:clickable="true"
					android:focusable="false"
					android:paddingBottom="16px"
					android:paddingLeft="11px"
					android:paddingRight="12px"
					android:paddingTop="12px"
					android:scaleType="fitXY" >
				</ImageView>

				<TextView
					android:id="@+id/gallery_info_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical|center_horizontal"
					android:gravity="center_vertical|center_horizontal"
					android:text="@string/no_media"
					android:textColor="@color/resolution_button_text_color"
					android:visibility="invisible" />
			</com.aptina.camera.components.ThumbnailControl>

			<ImageView
				android:id="@+id/img_camera_change"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginTop="10dip"
				android:clickable="true"
				android:src="@drawable/camera_change"
				android:visibility="gone" />

			<LinearLayout
				android:id="@+id/video_recording_indicator"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:layout_marginBottom="5dip"
				android:layout_marginRight="10dip"
				android:orientation="horizontal"
				android:visibility="gone">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:scaleType="center"
					android:src="@drawable/red_circle" />

				<TextView
					android:id="@+id/record_time"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="5dip"
					android:text="@string/recording_time"
					android:textColor="@android:color/white"/>
			</LinearLayout>

			<com.aptina.camera.components.ModeSelector
				android:id="@+id/mode_selector"
				android:layout_width="@dimen/mode_selector_width"
				android:layout_height="@dimen/mode_selector_height"
				android:layout_centerInParent="true"
				android:visibility="gone" />
		</RelativeLayout>
	</LinearLayout>


	<TextView
		android:id="@+id/txt_message"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="180px"
		android:background="@drawable/toast_round_background"
		android:gravity="center_horizontal"
		android:padding="5dip"
		android:textColor="@android:color/white"
		android:visibility="gone" />

</RelativeLayout>